--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Introduction to Causality: A Modern Approach
+title: "Introduction to Causality: A Modern Approach"
 description: A gentle introduction into the art and science of causal inference
 plugins:
   - jekyll-relative-links
