--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -10,6 +10,10 @@ rmd_files:
 
     "marketing.md",
     "discrimination.md",
-    
+
     "epistemology.md",
+
+    "notation.md",
+    "statistics.md",
+    "r-code.md"
   ]
